--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -48,30 +48,30 @@
 	
 	<!--CSS============================================= -->
 
-	<link rel="stylesheet" href="assets/css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/style.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/dark.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/swiper.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/components/bs-select.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/car.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/car/car-icons/style.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/font-icons.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/animate.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/car/fonts.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/responsive.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="assets/css/colors.php?color=c85e51" type="text/css" />
-	<link rel="stylesheet" href="assets/css/components/bs-select.css" type="text/css" />
-	<link rel="stylesheet" href="assets/css/components/bs-switches.css" type="text/css" />
-	<link rel="stylesheet" href="assets/css/components/datepicker.css" type="text/css" />
-	<link rel="stylesheet" href="assets/css/components/ion.rangeslider.css" type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/style.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/dark.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/swiper.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-select.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/car.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/car/car-icons/style.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-icons.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/car/fonts.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/responsive.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/colors.php?color=c85e51" type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-select.css" type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-switches.css" type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/datepicker.css" type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/ion.rangeslider.css" type="text/css" />
 
 
 
 	<!-- SLIDER REVOLUTION 5.x CSS SETTINGS -->
-	<link rel="stylesheet" type="text/css" href="assets/include/rs-plugin/css/settings.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="assets/include/rs-plugin/css/layers.css">
-	<link rel="stylesheet" type="text/css" href="assets/include/rs-plugin/css/navigation.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/include/rs-plugin/css/settings.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/include/rs-plugin/css/layers.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.url }}/assets/include/rs-plugin/css/navigation.css">
 	<!--[if lt IE 9]>
 		<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
