--- a/_includes/footer_script.html
+++ b/_includes/footer_script.html
@@ -8,30 +8,30 @@
 
 	<!-- Footer Scripts
 	============================================= -->
-	<script src="assets/js/functions.js"></script>
+	<script src="{{ site.url }}/assets/js/functions.js"></script>
 
 	<!-- External JavaScripts
 	============================================= -->
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/plugins.js"></script>
-	<script src="assets/js/360rotator.js"></script>
+	<script src="{{ site.url }}/assets/js/jquery.js"></script>
+	<script src="{{ site.url }}/assets/js/plugins.js"></script>
+	<script src="{{ site.url }}/assets/js/360rotator.js"></script>
 
 	<!-- Bootstrap Select Plugin -->
-	<script src="assets/js/components/bs-select.js"></script>
+	<script src="{{ site.url }}/assets/js/components/bs-select.js"></script>
 
 	<!-- SLIDER REVOLUTION 5.x SCRIPTS  -->
-	<script src="assets/include/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-	<script src="assets/include/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.actions.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.carousel.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.kenburn.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.layeranimation.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.migration.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.navigation.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.parallax.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js"></script>
-	<script src="assets/include/rs-plugin/js/extensions/revolution.extension.video.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.actions.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.carousel.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.kenburn.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.layeranimation.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.migration.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.navigation.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.parallax.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.slideanims.min.js"></script>
+	<script src="{{ site.url }}/assets/include/rs-plugin/js/extensions/revolution.extension.video.min.js"></script>
 
 
 
@@ -69,7 +69,7 @@
 				currentFrame: 3, // This the start frame for auto spin
 				imgList: '.threesixty_images', // selector for image list
 				progress: '.spinner', // selector to show the loading progress
-				imagePath:'assets/media/360degree-cars/', // path of the image assets
+				imagePath:'{{ site.url }}/assets/media/360degree-cars/', // path of the image assets
 				filePrefix: '', // file prefix if any
 				ext: '.png', // extention for the assets
 				height: 887,
@@ -88,7 +88,7 @@
 			}else{
 				revapi424 = tpj("#rev_slider_424_1").show().revolution({
 					sliderType:"carousel",
-					jsFileLocation:"include/rs-plugin/js/",
+					jsFileLocation:"{{ site.url }}/include/rs-plugin/js/",
 					sliderLayout:"auto",
 					dottedOverlay:"none",
 					delay:7000,
