--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -48,18 +48,18 @@
 	
 	<!--CSS============================================= -->
 
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/style.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/dark.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/swiper.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-select.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/car.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/car/car-icons/style.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-icons.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/car/fonts.css"  type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/assets/css/responsive.css"  type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/bootstrap.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/style.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/dark.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/swiper.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-select.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/car.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/car/car-icons/style.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/font-icons.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/animate.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/car/fonts.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/assets/css/responsive.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/colors.php" type="text/css" />
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-select.css" type="text/css" />
 	<link rel="stylesheet" href="{{ site.url }}/assets/css/components/bs-switches.css" type="text/css" />
