--- a/_layouts/car/product.html
+++ b/_layouts/car/product.html
@@ -44,13 +44,12 @@
 	<script src="{{ site.url }}/car/assets/js/jquery.js"></script>
 	<script src="{{ site.url }}/car/assets/js/plugins.js"></script>
 
-	<script src="{{ site.url }}/car/assets/js/360rotator.js"></script>
-	<!-- Bootstrap Select Plugin -->
-	<script src="{{ site.url }}/car/assets/js/components/bs-select.js"></script>	
+	<script src="https://maps.google.com/maps/api/js?key=YOUR_API_KEY"></script>
+	<script src="{{ site.url }}/car/assets/js/jquery.gmap.js"></script>
 
 	{% include car/footer_script.html %}
 
-	{% include car/script_revolution_slider.html %}
+	{% include car/script_maps.html %}
 
 </body>
 </html>
