--- a/_layouts/car/product.html
+++ b/_layouts/car/product.html
@@ -19,7 +19,9 @@
 
 		{% include car/header.html %}
 
-		{% include car/slider.html %}
+		{% include car/product/vios_slider.html %}
+
+		{% include car/product/vios_menu.html %}
 
 		<!-- Content
 		============================================= -->
