--- a/_includes/car/product/vios_slider.html
+++ b/_includes/car/product/vios_slider.html
@@ -14,25 +14,25 @@
 					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #C8CED6 50%, #7F858D 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="images/single/1.png""/>
+							<img src="{{ site.url }}/car/assets/media/single/1.png""/>
 						</div>
 					</div>
 					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #920F23 50%, #CB394E 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="images/single/2.png""/>
+							<img src="{{ site.url }}/car/assets/media/single/2.png""/>
 						</div>
 					</div>
 					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #D4D8DD 50%, #75787B 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="images/single/3.png""/>
+							<img src="{{ site.url }}/car/assets/media/single/3.png""/>
 						</div>
 					</div>
 					<div class="swiper-slide" style="height: 700px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #C99F25 50%, #9C780E 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="images/single/4.png""/>
+							<img src="{{ site.url }}/car/assets/media/single/4.png""/>
 						</div>
 					</div>
 				</div>
