--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -32,16 +32,16 @@
 
 												<!-- Mega Menu Cars Carousel -->
 												<div class="owl-carousel customjs image-carousel carousel-widget" data-margin="20" data-nav="false" data-pagi="true" data-items-xs="1" data-items-sm="2" data-items-md="4" data-items-lg="6" data-items-xl="6">
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/1.png" alt="Car">BMW 1 Series ActiveE</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/4.png" alt="Car">Mercedes-Benz S-Class</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/5.png" alt="Car">Gran Turismo</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/6.png" alt="Car">Mclaren 675LT SPIDER</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/7.png" alt="Car">Honda City</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/8.png" alt="Car">Toyota Qualis</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/9.png" alt="Car">Honda WR-V</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/10.png" alt="Car">Suzuki Breeza</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/2.png" alt="Car">Chevrolet Spark</a></div>
-													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="assets/media/mega-menu/3.png" alt="Car">Honda JaZZ</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/1.png" alt="Car">BMW 1 Series ActiveE</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/4.png" alt="Car">Mercedes-Benz S-Class</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/5.png" alt="Car">Gran Turismo</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/6.png" alt="Car">Mclaren 675LT SPIDER</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/7.png" alt="Car">Honda City</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/8.png" alt="Car">Toyota Qualis</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/9.png" alt="Car">Honda WR-V</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/10.png" alt="Car">Suzuki Breeza</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/2.png" alt="Car">Chevrolet Spark</a></div>
+													<div class="oc-item center"><a href="demos/car/car-single.html"><img src="{{ site.url }}/car/assets/media/mega-menu/3.png" alt="Car">Honda JaZZ</a></div>
 
 												</div>
 											</div>
