--- a/_includes/car/head_default.html
+++ b/_includes/car/head_default.html
@@ -60,11 +60,11 @@
 	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/car/fonts.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/responsive.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/colors.php?color=c85e51" type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/bs-select.css" type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/bs-switches.css" type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/datepicker.css" type="text/css" />
-	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/ion.rangeslider.css" type="text/css" />
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/colors.php?color=c85e51" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/bs-select.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/bs-switches.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/datepicker.css" media="none" onload="if(media!='all')media='all'">
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/ion.rangeslider.css" media="none" onload="if(media!='all')media='all'">
 
 
 
