--- a/_includes/car/site_panel.html
+++ b/_includes/car/site_panel.html
@@ -7,7 +7,7 @@
 
 			<div class="widget clearfix">
 
-				<a href="index.html"><img src="assets/media/logo@2x.png" alt="Canvas Logo" height="50"></a>
+				<a href="index.html"><img src="{{ site.url }}/car/assets/media/logo@2x.png" alt="Canvas Logo" height="50"></a>
 
 				<p>It has always been, and will always be, about quality. We're passionate about ethically sourcing the finest coffee beans, roasting them with great care. We'd like to hear your message!</p>
 
