--- a/_layouts/car/product.html
+++ b/_layouts/car/product.html
@@ -4,6 +4,12 @@
 
 	{% include car/head.html %}
 
+	{% include car/head_page.html %}
+
+	{% include car/head_script.html %}
+
+	{% include car/head_style.html %}
+
 </head>
 
 <body class="stretched side-push-panel" data-loader-html="<div><img src='{{ site.url }}/car/assets/media/page-loader.gif' alt='Loader'></div>">
