--- a/_includes/car/product/vios_slider.html
+++ b/_includes/car/product/vios_slider.html
@@ -3,9 +3,9 @@
 		<section id="slider" class="slider-element dark swiper_wrapper clearfix" data-effect="fade" data-loop="true" data-dots="true" data-speed="1000" data-autoplay="4500" style="height: 650px !important">
 
 			<div class="slider-text mb-5 clearfix">
-				<h2 class="font-primary">Porsche 911 GTS Models</h2>
-				<p class="font-primary">Color Varients</p>
-				<a href="https://www.youtube.com/watch?v=RKD2fNVP7kw" class="play-icon shadow" data-lightbox="iframe"><i class="icon-googleplay"></i></a>
+				<h2 class="font-primary">Toyota Vios 2019</h2>
+				<p class="font-primary">As Never Before</p>
+				<a href="https://www.youtube.com/watch?v=gTSWJD9yde4" class="play-icon shadow" data-lightbox="iframe"><i class="icon-googleplay"></i></a>
 			</div>
 
 
@@ -14,25 +14,37 @@
 					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #C8CED6 50%, #7F858D 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="{{ site.url }}/car/assets/media/single/1.png""/>
+							<img src="{{ site.url }}/car/assets/product/vios/Beige-4R0-s.png"/>
 						</div>
 					</div>
 					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #920F23 50%, #CB394E 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="{{ site.url }}/car/assets/media/single/2.png""/>
+							<img src="{{ site.url }}/car/assets/product/vios/Black-218-s.png"/>
 						</div>
 					</div>
 					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #D4D8DD 50%, #75787B 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="{{ site.url }}/car/assets/media/single/3.png""/>
+							<img src="{{ site.url }}/car/assets/product/vios/GRAY-1G3-s.png"/>
 						</div>
 					</div>
-					<div class="swiper-slide" style="height: 700px !important">
+					<div class="swiper-slide" style="height: 650px !important">
 						<div class="bg" style="background: linear-gradient(15deg, #C99F25 50%, #9C780E 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
-							<img src="{{ site.url }}/car/assets/media/single/4.png""/>
+							<img src="{{ site.url }}/car/assets/product/vios/Red-3R3-s.png"/>
+						</div>
+					</div>
+					<div class="swiper-slide" style="height: 650px !important">
+						<div class="bg" style="background: linear-gradient(15deg, #C99F25 50%, #9C780E 50%);"></div>
+						<div class="slider-caption slider-caption-center topmargin-lg">
+							<img src="{{ site.url }}/car/assets/product/vios/Silver-1D6-s.png"/>
+						</div>
+					</div>
+					<div class="swiper-slide" style="height: 650px !important">
+						<div class="bg" style="background: linear-gradient(15deg, #C99F25 50%, #9C780E 50%);"></div>
+						<div class="slider-caption slider-caption-center topmargin-lg">
+							<img src="{{ site.url }}/car/assets/product/vios/Super-White-040-s.png"/>
 						</div>
 					</div>
 				</div>
