--- a/_includes/car/product/vios_slider.html
+++ b/_includes/car/product/vios_slider.html
@@ -5,7 +5,7 @@
 			<div class="slider-text mb-5 clearfix">
 				<h2 class="font-primary">Toyota Vios 2019</h2>
 				<p class="font-primary">As Never Before</p>
-				<a href="https://www.youtube.com/watch?v=gTSWJD9yde4" class="play-icon shadow" data-lightbox="iframe"><i class="icon-googleplay"></i></a>
+				<a href="https://www.youtube.com/watch?v=gTSWJD9yde4?rel=0&autoplay=1" class="play-icon shadow" data-lightbox="iframe"><i class="icon-googleplay"></i></a>
 			</div>
 
 
