--- a/_includes/car/product/vios_slider.html
+++ b/_includes/car/product/vios_slider.html
@@ -42,7 +42,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide" style="height: 650px !important">
-						<div class="bg" style="background: linear-gradient(15deg, #C99F25 50%, #9C780E 50%);"></div>
+						<div class="bg" style="background: linear-gradient(15deg, #dedcd7 50%, #d6d5d2 50%);"></div>
 						<div class="slider-caption slider-caption-center topmargin-lg">
 							<img src="{{ site.url }}/car/assets/media/product/vios/Super-White-040-s.png"/>
 						</div>
