--- a/_includes/car/product/vios_menu.html
+++ b/_includes/car/product/vios_menu.html
@@ -8,12 +8,12 @@
 
 					<nav class="one-page-menu">
 						<ul>
-							<li><a href="#" data-href="#section-features"><div>Features</div></a></li>
-							<li><a href="#" data-href="#section-spec"><div>Technical Specs</div></a></li>
-							<li><a href="#" data-href="#section-price"><div>Price</div></a></li>
-							<li><a href="#" data-href="#section-gallery"><div>Gallery</div></a></li>
-							<li><a href="#" data-href="#section-brochures"><div>Brochures</div></a></li>
-							<li><a href="#" data-href="#section-store"><div>Find a Centre</div></a></li>
+							<li><a href="#" data-href="#section-features"><div>Tính năng</div></a></li>
+							<li><a href="#" data-href="#section-spec"><div>Thông số kỹ thuật</div></a></li>
+							<li><a href="#" data-href="#section-price"><div>Giá bán</div></a></li>
+							<li><a href="#" data-href="#section-gallery"><div>Hình ảnh</div></a></li>
+							<li><a href="#" data-href="#section-brochures"><div>Bộ sưu tập</div></a></li>
+							<li><a href="#" data-href="#section-store"><div>Đại lý</div></a></li>
 						</ul>
 					</nav>
 
