--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -19,16 +19,16 @@
 					============================================= -->
 					<nav id="primary-menu" class="with-arrows clearfix">
 						<ul>
-							<li class="current"><a href="#"><div>Home</div></a></li>
+							<li class="current"><a href="#"><div>Trang chủ</div></a></li>
 							<!-- Mega Menu -->
-							<li class="mega-menu"><a href="demos/car/car-single.html"><div>Models</div></a>
+							<li class="mega-menu"><a href="demos/car/car-single.html"><div>Xe mới</div></a>
 								<div class="mega-menu-content style-2 clearfix">
 									<ul class="mega-menu-column col-lg-12">
 										<li>
 											<div class="widget center clearfix">
 
-												<h3 class="nobottommargin">Featured Models</h3>
-												<a href="#" class="button button-small button-rounded button-border button-dark button-black font-primary" style="margin: 10px 0 40px">Show all Cars</a>
+												<h3 class="nobottommargin">Mẫu xe 2019</h3>
+												<a href="#" class="button button-small button-rounded button-border button-dark button-black font-primary" style="margin: 10px 0 40px">Tất cả xe</a>
 
 												<!-- Mega Menu Cars Carousel -->
 												<div class="owl-carousel customjs image-carousel carousel-widget" data-margin="20" data-nav="false" data-pagi="true" data-items-xs="1" data-items-sm="2" data-items-md="4" data-items-lg="6" data-items-xl="6">
@@ -49,13 +49,13 @@
 									</ul>
 								</div>
 							</li>
-							<li><a href="demos/car/car-listing.html"><div>Car Listing</div></a></li>
-							<li><a href="demos/car/car-dealers.html"><div>Dealers</div></a></li>
-							<li><a href="demos/car/car-accessories.html"><div>Accessories</div></a></li>
-							<li><a href="demos/car/car-interiors.html"><div>Interiors</div></a></li>
-							<li><a href="demos/car/car-faqs.html"><div>FAQs</div></a></li>
-							<li><a href="demos/car/car-blog.html"><div>Blog</div></a></li>
-							<li><a href="demos/car/car-contact.html"><div>Contacts</div></a></li>
+							<li><a href="demos/car/car-listing.html"><div>Danh sách xe</div></a></li>
+							<li><a href="demos/car/car-dealers.html"><div>Đại lý</div></a></li>
+							<li><a href="demos/car/car-accessories.html"><div>Phụ kiện</div></a></li>
+							<li><a href="demos/car/car-interiors.html"><div>Nội thất</div></a></li>
+							<li><a href="demos/car/car-faqs.html"><div>Câu hỏi thường gặp</div></a></li>
+							<li><a href="demos/car/car-blog.html"><div>Tin tức</div></a></li>
+							<li><a href="demos/car/car-contact.html"><div>Liên hệ</div></a></li>
 						</ul>
 					</nav><!-- #primary-menu end -->
 				</div>
