--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -19,7 +19,7 @@
 					============================================= -->
 					<nav id="primary-menu" class="with-arrows clearfix">
 						<ul>
-							<li class="current"><a href="#"><div>Trang chủ</div></a></li>
+							<li class="current"><a href="{{ site.url }}/car/"><div>Trang chủ</div></a></li>
 							<!-- Mega Menu -->
 							<li class="mega-menu"><a href="demos/car/car-single.html"><div>Xe mới</div></a>
 								<div class="mega-menu-content style-2 clearfix">
