--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -13,7 +13,7 @@
 
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
-									<h4>Hire</h4>
+									<h4>Góc xe cũ</h4>
 									<ul>
 										<li><a href="#">Documentation</a></li>
 										<li><a href="#">Feedback</a></li>
@@ -23,32 +23,31 @@
 							</div>
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
-									<h4>Community</h4>
+									<h4>Giải đáp thắc mắc</h4>
 									<ul>
-										<li><a href="#">Documentation</a></li>
-										<li><a href="#">Feedback</a></li>
-										<li><a href="#">Plugins</a></li>
-										<li><a href="#">Support Forums</a></li>
+										<li><a href="#">Câu Hỏi Thường Gặp</a></li>
+										<li><a href="#">Tính Giá Lăn Bánh</a></li>
+										<li><a href="#">Chi Phí </a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
-									<h4>Learn</h4>
+									<h4>Góc tư vấn</h4>
 									<ul>
-										<li><a href="#">Documentation</a></li>
-										<li><a href="#">Feedback</a></li>
-										<li><a href="#">Plugins</a></li>
+										<li><a href="#">Tin Tức - Sự Kiện</a></li>
+										<li><a href="#">Phong Thủy Xe Hơi</a></li>
+										<li><a href="#">Bảo Hiểm Xe Hơi</a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="col_one_fourth col_last">
 								<div class="widget widget_links clearfix">
-									<h4>About</h4>
+									<h4>Giới thiệu</h4>
 									<ul>
-										<li><a href="#">Documentation</a></li>
-										<li><a href="#">Feedback</a></li>
-										<li><a href="#">Plugins</a></li>
+										<li><a href="#">Tầm Nhìn</a></li>
+										<li><a href="#">Sứ Mệnh</a></li>
+										<li><a href="#">Chiến Lược Phát Triển</a></li>
 									</ul>
 								</div>
 							</div>
@@ -61,7 +60,7 @@
 							<br>
 							<div style="color: #444">
 								<span>&copy; Canvas Automotive. All Rights Reserved.</span><div class="clear"></div>
-								<p style="margin-top: 10px;">Objectively restore standards compliant opportunities whereas one-to-one collaboration and idea-sharing.</p>
+								<p style="margin-top: 10px;">Toyota Thái Hòa – Từ Liêm phân phối gồm: các dòng xe mới và xe đã qua sử dụng của Toyota (Vios, Yaris, Corolla Altis, Innova, Fortuner, Camry, Hiace, Hilux), phụ tùng chính hãng, phụ kiện chính hãng và không chính hãng, bảo hiểm dành cho xe.</p>
 							</div>
 
 						</div>
