--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -59,7 +59,7 @@
 							<img src="{{ site.url }}/car/assets/media/logo-footer.png" alt="" height="50" style="margin-top: ">
 							<br>
 							<div style="color: #444">
-								<span>&copy; Canvas Automotive. All Rights Reserved.</span><div class="clear"></div>
+								<span>&copy; Toyota Thái Hòa Từ Liêm. All Rights Reserved.</span><div class="clear"></div>
 								<p style="margin-top: 10px;">Toyota Thái Hòa – Từ Liêm phân phối gồm: các dòng xe mới và xe đã qua sử dụng của Toyota (Vios, Yaris, Corolla Altis, Innova, Fortuner, Camry, Hiace, Hilux), phụ tùng chính hãng, phụ kiện chính hãng và không chính hãng, bảo hiểm dành cho xe.</p>
 							</div>
 
