--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -23,7 +23,7 @@
 							</div>
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
-									<h4>Giải đáp thắc mắc</h4>
+									<h4>Giải đáp</h4>
 									<ul>
 										<li><a href="#">Câu Hỏi Thường Gặp</a></li>
 										<li><a href="#">Tính Giá Lăn Bánh</a></li>
