--- a/_includes/car/head.html
+++ b/_includes/car/head.html
@@ -30,7 +30,7 @@
     <meta name="geo.region" content="VN-HN" />
     <meta name="geo.position" content="21.013788779151376;105.80183207988739" />
     <meta name="ICBM" content="21.013788779151376, 105.80183207988739" />
-    <meta name="geo.placename" content="P1709, tòa nhà Trung Yên Plaza, số 1 phố Trung Hòa, Quận Cầu Giấy, Hà Nội" />
+    <meta name="geo.placename" content="Ngã ba Tố Hữu, Mộ Lao, Hà Đông, Hà Nội" />
 	
 	{% if site.google_verify %}<meta name="google-site-verification" content="{{ site.google_verify }}">{% endif %}
 	{% if site.bing_verify %}<meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
