--- a/_includes/car/head_page.html
+++ b/_includes/car/head_page.html
@@ -11,5 +11,4 @@
 	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/magnific-popup.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/car/fonts.css" media="none" onload="if(media!='all')media='all'">
 	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/responsive.css" media="none" onload="if(media!='all')media='all'">
-	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/colors.php?color=c85e51" media="none" onload="if(media!='all')media='a
-	ll'">
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/colors.php?color=c85e51" media="none" onload="if(media!='all')media='all'">
