--- a/_includes/car/site_panel.html
+++ b/_includes/car/site_panel.html
@@ -7,21 +7,21 @@
 
 			<div class="widget clearfix">
 
-				<a href="index.html"><img src="{{ site.url }}/car/assets/media/logo@2x.png" alt="Canvas Logo" height="50"></a>
+				<a href="{{ site.url }}/car/"><img src="{{ site.url }}/car/assets/media/logo@2x.png" alt="Canvas Logo" height="50"></a>
 
-				<p>It has always been, and will always be, about quality. We're passionate about ethically sourcing the finest coffee beans, roasting them with great care. We'd like to hear your message!</p>
+				<p>NHẬN BÁO GIÁ MỚI NHẤT VÀ ƯU ĐÃI KỊCH SÀN NGAY TRONG THÁNG NÀY!</p>
 
 				<div class="widget quick-contact-widget noborder notoppadding clearfix">
 
-					<h4>Quick Contact</h4>
+					<h4>ĐĂNG KÝ NGAY</h4>
 					<div class="quick-contact-form-result"></div>
-					<form id="quick-contact-form" name="quick-contact-form" action="include/quickcontact.php" method="post" class="quick-contact-form nobottommargin">
+					<form id="quick-contact-form" name="quick-contact-form" action="{{ site.url }}/car/assets/include/quickcontact.php" method="post" class="quick-contact-form nobottommargin">
 						<div class="form-process"></div>
-						<input type="text" class="required sm-form-control input-block-level" id="quick-contact-form-name" name="quick-contact-form-name" value="" placeholder="Full Name" />
-						<input type="text" class="required sm-form-control email input-block-level" id="quick-contact-form-email" name="quick-contact-form-email" value="" placeholder="Email Address" />
-						<textarea class="required sm-form-control input-block-level short-textarea" id="quick-contact-form-message" name="quick-contact-form-message" rows="4" cols="30" placeholder="Message"></textarea>
+						<input type="text" class="required sm-form-control input-block-level" id="quick-contact-form-name" name="quick-contact-form-name" value="" placeholder="Họ và tên" />
+						<input type="text" class="required sm-form-control phone input-block-level" id="quick-contact-form-phone" name="quick-contact-form-phone" value="" placeholder="Số điện thoại" />
+						<textarea class="required sm-form-control input-block-level short-textarea" id="quick-contact-form-message" name="quick-contact-form-message" rows="4" cols="30" placeholder="Nội dung"></textarea>
 						<input type="text" class="hidden" id="quick-contact-form-botcheck" name="quick-contact-form-botcheck" value="" />
-						<button type="submit" id="quick-contact-form-submit" name="quick-contact-form-submit" class="button button-small button-3d nomargin" value="submit">Send Email</button>
+						<button type="submit" id="quick-contact-form-submit" name="quick-contact-form-submit" class="button button-small button-3d nomargin" value="submit">GỬI NGAY</button>
 					</form>
 
 				</div>
