--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -15,9 +15,9 @@
 								<div class="widget widget_links clearfix">
 									<h4>Góc xe cũ</h4>
 									<ul>
-										<li><a href="#">Documentation</a></li>
-										<li><a href="#">Feedback</a></li>
-										<li><a href="#">Plugins</a></li>
+										<li><a href="#">Xe đã qua sử dụng</a></li>
+										<li><a href="#">Vay Toyota - Mua Toyota</a></li>
+										<li><a href="#">Bảo hiểm Toyota</a></li>
 									</ul>
 								</div>
 							</div>
