--- a/_layouts/car/page.html
+++ b/_layouts/car/page.html
@@ -27,7 +27,7 @@
 
 		<!-- Page Title
 		============================================= -->
-		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('images/accessories/page-title.jpg'); background-size: cover; padding: 140px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
+		<section id="page-title" class="page-title-parallax page-title-dark" style="background-image: url('{{ site.url }}/car/assets/images/page-title.jpg'); background-size: cover; padding: 140px 0;" data-bottom-top="background-position:0px 0px;" data-top-bottom="background-position:0px -300px;">
 
 			<div class="container clearfix">
 				<h1>{{ page.title }}</h1>
