--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -20,14 +20,15 @@
 					<nav id="primary-menu" class="with-arrows clearfix">
 						<ul>
 							<li class="current"><a href="{{ site.url }}/car/"><div>Trang chủ</div></a></li>
+							<li><a href="{{ site.url }}/car/list/"><div>Danh sách xe</div></a></li>
 							<!-- Mega Menu -->
-							<li class="mega-menu"><a href="demos/car/car-single.html"><div>Xe mới</div></a>
+							<li class="mega-menu"><a href="{{ site.url }}/car/new/"><div>Xe mới</div></a>
 								<div class="mega-menu-content style-2 clearfix">
 									<ul class="mega-menu-column col-lg-12">
 										<li>
 											<div class="widget center clearfix">
 
-												<h3 class="nobottommargin">Mẫu xe 2019</h3>
+												<h3 class="nobottommargin">XE 2019</h3>
 												<a href="#" class="button button-small button-rounded button-border button-dark button-black font-primary" style="margin: 10px 0 40px">Tất cả xe</a>
 
 												<!-- Mega Menu Cars Carousel -->
@@ -49,13 +50,11 @@
 									</ul>
 								</div>
 							</li>
-							<li><a href="demos/car/car-listing.html"><div>Danh sách xe</div></a></li>
-							<li><a href="demos/car/car-dealers.html"><div>Đại lý</div></a></li>
-							<li><a href="demos/car/car-accessories.html"><div>Phụ kiện</div></a></li>
-							<li><a href="demos/car/car-interiors.html"><div>Nội thất</div></a></li>
-							<li><a href="demos/car/car-faqs.html"><div>Câu hỏi thường gặp</div></a></li>
-							<li><a href="demos/car/car-blog.html"><div>Tin tức</div></a></li>
-							<li><a href="demos/car/car-contact.html"><div>Liên hệ</div></a></li>
+							<li><a href="{{ site.url }}/car/old/"><div>Xe cũ</div></a></li>
+							<li><a href="{{ site.url }}/car/accessories/"><div>Phụ kiện</div></a></li>
+							<li><a href="{{ site.url }}/car/faqs/"><div>Câu hỏi thường gặp</div></a></li>
+							<li><a href="{{ site.url }}/car/blog/"><div>Tin tức</div></a></li>
+							<li><a href="{{ site.url }}/car/contact/"><div>Liên hệ</div></a></li>
 						</ul>
 					</nav><!-- #primary-menu end -->
 				</div>
