--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -60,7 +60,7 @@
 							<br>
 							<div style="color: #444">
 								<span>&copy; Toyota Thái Hòa Từ Liêm. All Rights Reserved.</span><div class="clear"></div>
-								<p style="margin-top: 10px;">Toyota Thái Hòa – Từ Liêm phân phối gồm: các dòng xe mới và xe đã qua sử dụng của Toyota (Vios, Yaris, Corolla Altis, Innova, Fortuner, Camry, Hiace, Hilux), phụ tùng chính hãng, phụ kiện chính hãng và không chính hãng, bảo hiểm dành cho xe.</p>
+								<p style="margin-top: 10px;">Toyota Thái Hòa Từ Liêm phân phối: các dòng xe mới và xe đã qua sử dụng của Toyota (Vios, Yaris, Corolla Altis, Innova, Fortuner, Camry, Hiace, Hilux); phụ tùng, phụ kiện chính hãng, bảo hiểm dành cho xe.</p>
 							</div>
 
 						</div>
