--- a/_layouts/car/accessories.html
+++ b/_layouts/car/accessories.html
@@ -34,7 +34,7 @@
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{{ site.url }}/car/">Trang chủ</a></li>
 					<li class="breadcrumb-item"><a href="{{ site.url }}/car/list/">Xe mới</a></li>
-					<li class="breadcrumb-item active" aria-current="page">FAQs</li>
+					<li class="breadcrumb-item active" aria-current="page">Phụ kiện</li>
 				</ol>
 			</div>
 
