--- a/_layouts/car/list.html
+++ b/_layouts/car/list.html
@@ -6,6 +6,12 @@
 
 	{% include car/head_page.html %}
 
+	<!-- Bootstrap Select CSS -->
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/bs-select.css" type="text/css" />
+
+	<!-- Bootstrap Switch CSS -->
+	<link rel="stylesheet" href="{{ site.url }}/car/assets/css/components/bs-switches.css" type="text/css" />
+
 	{% include car/head_script.html %}
 
 	{% include car/head_style.html %}
