--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -56,7 +56,7 @@
 
 						<div class="col-lg-5 fright tright col_last">
 
-							<img src="{{ site.url }}/car/assets/media/logo-footer.png" alt="" height="50" style="margin-top: ">
+							<img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx100.png" alt="Huỳnh Toyota Thái Hòa Từ Liêm" height="50" style="margin-top: ">
 							<br>
 							<div style="color: #444">
 								<span>&copy; Toyota Thái Hòa Từ Liêm. All Rights Reserved.</span><div class="clear"></div>
