--- a/_includes/car/site_panel.html
+++ b/_includes/car/site_panel.html
@@ -7,7 +7,7 @@
 
 			<div class="widget clearfix">
 
-				<a href="{{ site.url }}/car/"><img src="{{ site.url }}/car/assets/media/logo@2x.png" alt="Canvas Logo" height="50"></a>
+				<a href="{{ site.url }}/car/"><img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx100.png" alt="Huỳnh Toyota Thái Hòa Từ Liêm" height="50"></a>
 
 				<p>NHẬN BÁO GIÁ MỚI NHẤT VÀ ƯU ĐÃI KỊCH SÀN NGAY TRONG THÁNG NÀY!</p>
 
