--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -14,7 +14,7 @@
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
 									<h4>Góc xe cũ</h4>
-									<ul>
+									<ul style="color: #fff;">
 										<li><a href="#">Xe đã qua sử dụng</a></li>
 										<li><a href="#">Vay Toyota - Mua Toyota</a></li>
 										<li><a href="#">Bảo hiểm Toyota</a></li>
@@ -24,7 +24,7 @@
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
 									<h4>Giải đáp</h4>
-									<ul>
+									<ul style="color: #fff;">
 										<li><a href="#">Câu Hỏi Thường Gặp</a></li>
 										<li><a href="#">Tính Giá Lăn Bánh</a></li>
 										<li><a href="#">Chi Phí </a></li>
@@ -34,7 +34,7 @@
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
 									<h4>Góc tư vấn</h4>
-									<ul>
+									<ul style="color: #fff;">
 										<li><a href="#">Tin Tức - Sự Kiện</a></li>
 										<li><a href="#">Phong Thủy Xe Hơi</a></li>
 										<li><a href="#">Bảo Hiểm Xe Hơi</a></li>
@@ -44,7 +44,7 @@
 							<div class="col_one_fourth col_last">
 								<div class="widget widget_links clearfix">
 									<h4>Giới thiệu</h4>
-									<ul>
+									<ul style="color: #fff;">
 										<li><a href="#">Tầm Nhìn</a></li>
 										<li><a href="#">Sứ Mệnh</a></li>
 										<li><a href="#">Chiến Lược Phát Triển</a></li>
@@ -58,7 +58,7 @@
 
 							<img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx100.png" alt="Huỳnh Toyota Thái Hòa Từ Liêm" height="50" style="margin-top: ">
 							<br>
-							<div style="color: #444">
+							<div style="color: #fff;">
 								<span>&copy; Toyota Thái Hòa Từ Liêm. All Rights Reserved.</span><div class="clear"></div>
 								<p style="margin-top: 10px;">Toyota Thái Hòa Từ Liêm phân phối: các dòng xe mới và xe đã qua sử dụng của Toyota (Vios, Yaris, Corolla Altis, Innova, Fortuner, Camry, Hiace, Hilux); phụ tùng, phụ kiện chính hãng, bảo hiểm dành cho xe.</p>
 							</div>
