--- a/_includes/car/footer.html
+++ b/_includes/car/footer.html
@@ -14,40 +14,40 @@
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
 									<h4>Góc xe cũ</h4>
-									<ul style="color: #fff;">
-										<li><a href="#">Xe đã qua sử dụng</a></li>
-										<li><a href="#">Vay Toyota - Mua Toyota</a></li>
-										<li><a href="#">Bảo hiểm Toyota</a></li>
+									<ul>
+										<li><a style="color: #fff !important;" href="#">Xe đã qua sử dụng</a></li>
+										<li><a style="color: #fff !important;" href="#">Vay Toyota - Mua Toyota</a></li>
+										<li><a style="color: #fff !important;" href="#">Bảo hiểm Toyota</a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
 									<h4>Giải đáp</h4>
-									<ul style="color: #fff;">
-										<li><a href="#">Câu Hỏi Thường Gặp</a></li>
-										<li><a href="#">Tính Giá Lăn Bánh</a></li>
-										<li><a href="#">Chi Phí </a></li>
+									<ul>
+										<li><a style="color: #fff !important;" href="#">Câu Hỏi Thường Gặp</a></li>
+										<li><a style="color: #fff !important;" href="#">Tính Giá Lăn Bánh</a></li>
+										<li><a style="color: #fff !important;" href="#">Chi Phí </a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="col_one_fourth">
 								<div class="widget widget_links clearfix">
 									<h4>Góc tư vấn</h4>
-									<ul style="color: #fff;">
-										<li><a href="#">Tin Tức - Sự Kiện</a></li>
-										<li><a href="#">Phong Thủy Xe Hơi</a></li>
-										<li><a href="#">Bảo Hiểm Xe Hơi</a></li>
+									<ul>
+										<li><a style="color: #fff !important;" href="#">Tin Tức - Sự Kiện</a></li>
+										<li><a style="color: #fff !important;" href="#">Phong Thủy Xe Hơi</a></li>
+										<li><a style="color: #fff !important;" href="#">Bảo Hiểm Xe Hơi</a></li>
 									</ul>
 								</div>
 							</div>
 							<div class="col_one_fourth col_last">
 								<div class="widget widget_links clearfix">
 									<h4>Giới thiệu</h4>
-									<ul style="color: #fff;">
-										<li><a href="#">Tầm Nhìn</a></li>
-										<li><a href="#">Sứ Mệnh</a></li>
-										<li><a href="#">Chiến Lược Phát Triển</a></li>
+									<ul>
+										<li><a style="color: #fff !important;" href="#">Tầm Nhìn</a></li>
+										<li><a style="color: #fff !important;" href="#">Sứ Mệnh</a></li>
+										<li><a style="color: #fff !important;" href="#">Chiến Lược Phát Triển</a></li>
 									</ul>
 								</div>
 							</div>
