--- a/_layouts/car/post.html
+++ b/_layouts/car/post.html
@@ -1,137 +1,85 @@
 <!DOCTYPE html>
-<html lang="vi-VN" class="no-js">
+<html dir="ltr" lang="vi-VN">
 <head>
 
-	{% include head.html %}
+    {% include car/head.html %}
+
+    {% include car/head_page.html %}
+
+    {% include car/head_script.html %}
+
+    {% include car/head_style.html %}
 
 </head>
 
-<body>
+<body class="stretched side-push-panel" data-loader-html="<div><img src='{{ site.url }}/car/assets/media/page-loader.gif' alt='Loader'></div>">
 
-	{% include header.html %}
+    <!-- Side Panel Overlay -->
+    <div class="body-overlay"></div>
 
-	<!-- start banner Area -->
-    <section class="banner-area relative" id="home">    
-        <div class="overlay overlay-bg"></div>
-        <div class="container">
-            <div class="row d-flex align-items-center justify-content-center">
-                <div class="about-content col-lg-12">
-                    <h1 class="text-white">{{ page.title }}</h1>   
-                    <p class="text-white link-nav"><a href="{{ site.url }}">Trang chủ </a>  <span class="lnr lnr-arrow-right"></span>  <a href="{{ site.url }}{{ page.url }}"> My Blog</a>  <span class="lnr lnr-arrow-right"></span>  <a href="{{ site.url }}{{ page.url }}"> {{ page.title }}</a></p>
-                </div>                                          
+    {% include car/site_panel.html %}
+
+    <!-- Document Wrapper
+    ============================================= -->
+    <div id="wrapper" class="clearfix">
+
+        {% include car/header.html %}
+
+        <!-- Page Title
+        ============================================= -->
+        <section id="page-title">
+
+            <div class="container clearfix">
+                <h1>{{ page.title }}</h1>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="{{ site.url }}/car/">Trang chủ</a></li>
+                    <li class="breadcrumb-item"><a href="{{ site.url }}/car/list/">Xe mới</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Blog</li>
+                </ol>
             </div>
-        </div>
-    </section>
-    <!-- End banner Area -->    
-	
-	<!-- Start blog-posts Area -->
-	<section class="blog-posts-area section-gap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-8 post-list blog-post-list">
-					<div class="single-post">
-						<img class="img-fluid" src="{{ site.url }}/{{ page.image }}" alt="{{ page.title }}">
-						<!--ul class="tags">
-							<li><a href="#">Art,</a></li>
-							<li><a href="#">Technology,</a></li>
-							<li><a href="#">Fashion</a></li>
-						</ul-->
-						<a href="{{ site.url }}{{ page.url }}">
-							<h2 style="font-size: 40px;text-align: center;">{{ page.title }}</h2>
-						</a>
-						<div class="content-wrap" style="margin-top: 2em;">
 
-							{{ content }}
+        </section><!-- #page-title end -->
 
-						</div>
+        <!-- Content
+        ============================================= -->
+        <section id="content">
 
-						<div class="bottom-meta">
-							<div class="user-details row align-items-center">
-								<div class="comment-wrap col-lg-6 col-sm-6">
-									<ul>
-										<li><a href="#"><span class="lnr lnr-heart"></span>	4 likes</a></li>
-										<li><a href="#"><span class="lnr lnr-bubble"></span> 06 Comments</a></li>
-									</ul>
-								</div>
-								<div class="social-wrap col-lg-6">
-									<ul>
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-										<li><a href="#"><i class="fa fa-behance"></i></a></li>
-									</ul>
-									
-								</div>
-							</div>
-						</div>
+            <div class="content-wrap">
 
-                        <!-- Start nav Area -->
-                        <section class="nav-area pt-50 pb-100">
-                            <div class="container">
-                                <div class="row justify-content-between">
-                                    <div class="col-sm-6 nav-left justify-content-start d-flex">
-                                        <div class="thumb">
-                                            <img src="{{ site.url }}/assets/img/blog/prev.jpg" alt="">
-                                        </div>
-                                        <div class="post-details">
-                                            <p>Prev Post</p>
-                                            <h4 class="text-uppercase"><a href="#">A Discount Toner</a></h4>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6 nav-right justify-content-end d-flex">
-                                        <div class="post-details">
-                                            <p>Prev Post</p>
-                                            <h4 class="text-uppercase"><a href="#">A Discount Toner</a></h4>
-                                        </div>             
-                                        <div class="thumb">
-                                            <img src="{{ site.url }}/assets/img/blog/next.jpg" alt="">
-                                        </div>                         
-                                    </div>
-                                </div>
-                            </div>    
-                        </section>
-                        <!-- End nav Area -->
-                        <!-- Start comment-sec Area -->
-                        <section class="comment-sec-area pt-80 pb-80">
-                            <div class="container">
-                                <div class="row flex-column">
-                                    <h5 class="text-uppercase pb-80">05 Comments</h5>                                                                                                                                                           
-                                </div>
-                            </div>    
-                        </section>
-                        <!-- End comment-sec Area -->
-                        
-                        <!-- Start commentform Area -->
-                        <section class="commentform-area pt-80">
-                            <div class="container">
-                                <h5 class="pb-50">Leave a Reply</h5>
-                                <div class="row flex-row d-flex">
-                                    <div class="col-lg-4 col-md-6">
-                                        <input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
-                                        <input name="email" placeholder="Enter your email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your email'" class="common-input mb-20 form-control" required="" type="email">
-                                        <input name="Subject" placeholder="Subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your Subject'" class="common-input mb-20 form-control" required="" type="text">
-                                    </div>
-                                    <div class="col-lg-8 col-md-6">
-                                        <textarea class="form-control mb-10" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-                                        <a class="primary-btn mt-20" href="#">Comment</a>
-                                    </div>
-                                </div>
-                            </div>    
-                        </section>
-                        <!-- End commentform Area -->
-					</div>																		
-				</div>
+                <div class="container">
+                    <div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('images/hero-slider/2.jpg') center center / cover;">
+                        <div class="col-md-6 px-0 py-3" style="z-index: 1">
+                            <strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong>
+                            <h2 class="t600 mb-2">{{ page.title }}</h2>
+                        </div>
+                        <div class="video-wrap rounded" style="position: absolute; top: 0; left: 0; height: 100%; z-index: 0">
+                            <div class="video-overlay" style="background: rgba(0,0,0,0.5);"></div>
+                        </div>
+                    </div>
+                </div>
 
-				{% include sidebar.html %}
-				
-			</div>
-		</div>	
-	</section>
-	<!-- End blog-posts Area -->
+                {{ content }}
 
-	{% include footer.html %}
+            </div>
 
-	{% include footer_script.html %}
+        </section><!-- #content end -->
+
+        {% include car/footer.html %}
+
+    </div><!-- #wrapper end -->
+
+    <!-- Go To Top
+    ============================================= -->
+    <div id="gotoTop" class="icon-angle-up"></div>
+    <!-- Contact Button
+    ============================================= -->
+    <div id="contact-me" class="icon-line-mail side-panel-trigger bgcolor"></div>
+    <!-- External JavaScripts
+    ============================================= -->
+    <script src="{{ site.url }}/car/assets/js/jquery.js"></script>
+    <script src="{{ site.url }}/car/assets/js/plugins.js"></script>
+
+    {% include car/footer_script.html %}
 
 </body>
 </html>
