--- a/_layouts/car/post.html
+++ b/_layouts/car/post.html
@@ -47,9 +47,9 @@
             <div class="content-wrap">
 
                 <div class="container">
-                    <div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('images/hero-slider/2.jpg') center center / cover;">
+                    <div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ page.image }}') center center / cover;">
                         <div class="col-md-6 px-0 py-3" style="z-index: 1">
-                            <strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong>
+                            <!--strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong-->
                             <h2 class="t600 mb-2">{{ page.title }}</h2>
                         </div>
                         <div class="video-wrap rounded" style="position: absolute; top: 0; left: 0; height: 100%; z-index: 0">
