--- a/_layouts/car/post.html
+++ b/_layouts/car/post.html
@@ -47,7 +47,7 @@
             <div class="content-wrap">
 
                 <div class="container">
-                    <div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ post.image }}') center center / cover;">
+                    <div class="jumbotron p-4 p-md-5 dark position-relative rounded" style="background: url('{{ page.image }}') center center / cover;">
                         <div class="col-md-6 px-0 py-3" style="z-index: 1">
                             <!--strong class="d-inline-block mb-2 t600 uppercase ls2">World</strong-->
                             <h2 class="t600 mb-2">{{ page.title }}</h2>
@@ -65,12 +65,21 @@
                         </div>
 
                         <div class="col-md-4">
-                            <div class="card mt-4">
-                                <img class="card-img-top" src="{{ site.url }}/images/avatar/avata-nguyentronghuynh.com.jpg" alt="Trọng Huỳnh Toyota Thái Hòa Từ Liêm">
-                                <div class="card-body">
-                                    <h4 class="mb-1 color center">ĐƯỜNG DÂY NÓNG 24/24</h4>
-                                    <h2 class="card-title mb-2"><i class="icon-phone-sign position-relative mr-1 color" style="top: 4px;"></i> <a href="tel:0985629621">0985.629.621</a></h2>
-                                    <p class="card-text" style="text-align: justify;">Chúng tôi luôn sẵn sàng 24/7. Nhân viên chuyên gia của chúng tôi đang trực để trả lời câu hỏi của bạn. Bạn cũng có thể liên hệ qua email: <a class="btn-link" href="mailto:info@nguyentronghuynh.com">info@nguyentronghuynh.com</a></p>
+                            <div class="sidebar sticky-sidebar-wrap nobottommargin clearfix">
+                                <div class="sidebar-widgets-wrap">
+                                    <div class="sticky-sidebar">
+
+                                        <div class="widget clearfix">
+                                            <div class="card mt-4">
+                                                <img class="card-img-top" src="{{ site.url }}/images/avatar/avata-nguyentronghuynh.com.jpg" alt="Trọng Huỳnh Toyota Thái Hòa Từ Liêm">
+                                                <div class="card-body">
+                                                    <h4 class="mb-1 color center">ĐƯỜNG DÂY NÓNG 24/24</h4>
+                                                    <h2 class="card-title mb-2 center"><i class="icon-phone-sign position-relative mr-1 color" style="top: 4px;"></i> <a href="tel:0985629621">0985.629.621</a></h2>
+                                                    <p class="card-text" style="text-align: justify;">Chúng tôi luôn sẵn sàng 24/7. Nhân viên chuyên gia của chúng tôi đang trực để trả lời câu hỏi của bạn. Bạn cũng có thể liên hệ qua email: <a class="btn-link" href="mailto:info@nguyentronghuynh.com">info@nguyentronghuynh.com</a></p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
