--- a/_includes/car/header.html
+++ b/_includes/car/header.html
@@ -11,8 +11,8 @@
 					<!-- Logo
 						============================================= -->
 					<div id="logo">
-						<a href="demo-car.html" class="standard-logo"><img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx50.png" alt="Huỳnh toyota thái hòa từ liêm"></a>
-						<a href="demo-car.html" class="retina-logo"><img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx100.png" alt="Huỳnh toyota thái hòa từ liêm"></a>
+						<a href="{{ site.url }}/car/" class="standard-logo"><img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx50.png" alt="Huỳnh toyota thái hòa từ liêm"></a>
+						<a href="{{ site.url }}/car/" class="retina-logo"><img src="{{ site.url }}/car/assets/media/logo-toyota-nguyentronghuynh.comx100.png" alt="Huỳnh toyota thái hòa từ liêm"></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
