--- a/_includes/car/slider.html
+++ b/_includes/car/slider.html
@@ -4,30 +4,30 @@
 
 			<div class="swiper-container swiper-parent">
 				<div class="swiper-wrapper">
-					<div class="swiper-slide dark" style="background-image: url('{{ site.url }}/car/assets/media/hero-slider/4.jpg'); background-size: cover">
+					<div class="swiper-slide dark" style="background-image: url('{{ site.url }}/car/assets/media/hero-slider/toyota-camry-fullhd.jpg'); background-size: cover">
 						<div class="container clearfix">
 							<div class="slider-caption top-left center">
-								<h2 class="font-primary nott">Renegade 730S</h2>
+								<h2 class="font-primary nott">NEW CAMRY 2019</h2>
 								<p class="t300 font-primary d-none d-sm-block">Raise your limits over</p>
-								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">View Details</a>
+								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
 							</div>
 						</div>
 					</div>
-					<div class="swiper-slide dark" style="background-image: url('{{ site.url }}/car/assets/media/hero-slider/2.jpg'); background-size: cover">
+					<div class="swiper-slide dark" style="background-image: url('{{ site.url }}/car/assets/media/hero-slider/toyota-land-cruiser-fullhd.jpg'); background-size: cover">
 						<div class="container clearfix">
 							<div class="slider-caption center">
-								<h2 class="font-primary nott">Chevrolet Traverse</h2>
+								<h2 class="font-primary nott">TOYOTA LAND CRUISER</h2>
 								<p class="t300 font-primary d-none d-sm-block">New and Powerful SUV</p>
-								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">View Details</a>
+								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
 							</div>
 						</div>
 					</div>
-					<div class="swiper-slide dark" style="background-image: url('{{ site.url }}/car/assets/media/hero-slider/3.jpg'); background-size: cover">
+					<div class="swiper-slide dark" style="background-image: url('{{ site.url }}/car/assets/media/hero-slider/toyota-land-yaris-fullhd.jpg'); background-size: cover">
 						<div class="container clearfix">
 							<div class="slider-caption slider-caption-center">
-								<h2 class="font-primary nott">Audi 2018 S5 Cabriolet</h2>
-								<p class="t300 font-primary d-none d-sm-block">A Black Diamond</p>
-								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">View Details</a>
+								<h2 class="font-primary nott">TOYOTA YARIS</h2>
+								<p class="t300 font-primary d-none d-sm-block">A Blue Diamond</p>
+								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
 							</div>
 						</div>
 					</div>
