--- a/_includes/car/slider.html
+++ b/_includes/car/slider.html
@@ -9,7 +9,7 @@
 							<div class="slider-caption top-left center">
 								<h2 class="font-primary nott">NEW CAMRY 2019</h2>
 								<p class="t300 font-primary d-none d-sm-block">Raise your limits over</p>
-								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
+								<a href="{{ site.url }}/car/camry/" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
 							</div>
 						</div>
 					</div>
@@ -18,7 +18,7 @@
 							<div class="slider-caption center">
 								<h2 class="font-primary nott">TOYOTA LAND CRUISER</h2>
 								<p class="t300 font-primary d-none d-sm-block">New and Powerful SUV</p>
-								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
+								<a href="{{ site.url }}/car/land-cruiser/" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
 							</div>
 						</div>
 					</div>
@@ -27,7 +27,7 @@
 							<div class="slider-caption slider-caption-center">
 								<h2 class="font-primary nott">TOYOTA YARIS</h2>
 								<p class="t300 font-primary d-none d-sm-block">A Blue Diamond</p>
-								<a href="demos/car/car-single.html" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
+								<a href="{{ site.url }}/car/yaris/" class="button button-rounded button-border button-white button-light nott">Xem chi tiết</a>
 							</div>
 						</div>
 					</div>
