--- a/_includes/car/script_revolution_slider.html
+++ b/_includes/car/script_revolution_slider.html
@@ -37,7 +37,7 @@
 		});
 
 		//threesixty degree
-		window.onload = init;
+/*		window.onload = init;
 		var car;
 		function init(){
 
@@ -56,7 +56,7 @@
 				responsive: true,
 			});
 		};
-
+*/
 		// Rev Slider
 		var tpj=jQuery;
 		var revapi424;
